fix: add scroll-bar on display overflow

--- a/style.css
+++ b/style.css
@@ -48,6 +48,8 @@ main {
     background-color: #ffffff;
     border-radius: 0px 0px 10px 10px;
     padding: 1em;
+    overflow-x: auto;
+    overflow-y: hidden;
 
     font-family: "Major Mono Display", monospace;
     font-weight: bold;
